created and added sliding pane when clicking on marker

--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "axios": "^1.13.1",
     "leaflet": "^1.9.4",
-    "react": "^19.0.0-rc.1",
-    "react-dom": "^19.0.0-rc.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0-rc.2",
-    "react-router": "^7.9.5"
+    "react-router": "^7.9.5",
+    "react-sliding-pane": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
