--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -17,7 +18,8 @@
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.9.5",
-    "react-sliding-pane": "^7.3.0"
+    "react-sliding-pane": "^7.3.0",
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
